$Id: NEWS,v 1.264 2002-10-30 19:29:19 castaglia Exp $

CVS
---------------------------------
- Fixed configure script detection and handling of ncurses (HAVE_LIBNCURSES
  was not being properly defined).
- Added --enable-scoreboard-buffer-size option to configure script, for
  tuning the size of some scoreboard fields (e.g. the full client command
  and the current working directory).
- Bug 1287 - Error compile with autoshadow option.  AIX does not have
  traditional shadow support, and uses other mechanisms.  This means that
  the --enable-autoshadow and --enable-shadow configure options should not
  be used when configuring proftpd for AIX.  The configure script has been
  updated to detect when these options are used on AIX, and to automatically
  disable them.
- Bug 1722 - Can't work magic cookie %F on FreeBSD.
- Make sure session.xfer uses cleared memory so unset structure members
  won't contain random values.
- Fixed handling of AuthAliasOnly, broken slightly by Bug#1567.
- Bug 1800 - Proftpd child segfaults when using a PASS without no USER first.
  mod_wrap was making a bad assumption about the USER name being available.
  This assumption has been corrected.

1.2.7rc2 - Released 2002-10-22
---------------------------------
- Bug 1757 - non-ANSI Syntax in netio.c
- Bug 1735 - Proftpd 1.2.6 compiled on FreeBSD 4.6.2 exits on signal 11
- Bug 1759 - ftpwho shows much more connections than really is.  This bug
             only occurred for those daemons running in inetd mode.
- Bug 1769 - Lack of supplemental groups can cause segfault.  This bug is
             a result of the fix for Bug 1666.
- Bug 1770 - Forgetting to check for no IP in string. 
- Moved the switching to the User/Group for a vhost up in the order, to occur
  before any modules' session initialization callback is invoked.
- Bug 1644 - LogFormat local IP and FQDN tags missing.  Added %L to LogFormat
             meta sequences for logging local server IP address, and %V for